# platform_build

./: .gitignore  Android.bp  Android.mk  Changes.md  CleanSpec.mk  Deprecation.md  METADATA  OWNERS  PREUPLOAD.cfg  README.md  Usage.txt  banchanHelp.sh  buildspec.mk.default  cleanspec.mk  cogsetup.sh  envsetup.sh  finalize-aidl-vndk-sdk-resources.sh  finalize-cleanup.sh  finalize-locally-mainline-sdk.sh  finalize-sdk-rel.sh  finalize-step-1-for-build-target.sh  finalize-step-1.sh  finalize-step-2-for-build-target.sh  finalize-step-2.sh  finalize_branch_for_release.sh  help.sh  navbar.md  rbesetup.sh  shell_utils.sh  tapasHelp.sh
core/: .dex_preopt_odex_install.mk.swp  .main.mk.swp  64_bit_blacklist.mk  BUILD.bazel  Makefile  OWNERS  aapt2.mk  aapt_flags.mk  all_versions.bzl  allowed_ndk_types.mk  android_manifest.mk  android_soong_config_vars.mk  android_vts_host_config.mk  apicheck_msg_current.txt  apidiff.mk  app_certificate_validate.mk  app_prebuilt_internal.mk  armelf.x  armelf.xsc  armelflib.x  art_config.mk  artifact_path_requirements.mk  autogen_test_config.mk  aux_config.mk  aux_executable.mk  aux_static_library.mk  aux_toolchain.mk  base_rules.mk  binary.mk  board_config.mk  board_config_wifi.mk  board_config_wpa_supplicant.mk  build-system.html  build_id.mk  build_id.rbc  build_rro_package.mk  cc_prebuilt_internal.mk  ccache.mk  check_elf_file.mk  checktree  (+178 more)
core/clang/: HOST_CROSS_windows.mk  HOST_CROSS_x86.mk  HOST_CROSS_x86_64.mk  HOST_x86.mk  HOST_x86_64.mk  HOST_x86_common.mk  OWNERS  TARGET_arm.mk  TARGET_arm64.mk  TARGET_mips.mk  TARGET_mips64.mk  TARGET_riscv64.mk  TARGET_x86.mk  TARGET_x86_64.mk  arm.mk  arm64.mk  config.mk  mips.mk  mips64.mk  tidy.mk  versions.mk  x86.mk  x86_64.mk  x86_common.mk
core/combo/: HOST_CROSS_linux_bionic-arm64.mk  HOST_CROSS_windows-x86.mk  HOST_CROSS_windows-x86_64.mk  HOST_darwin-x86.mk  HOST_darwin-x86_64.mk  HOST_darwin.mk  HOST_linux-x86.mk  HOST_linux-x86_64.mk  HOST_linux.mk  HOST_windows-x86.mk  HOST_windows-x86_64.mk  TARGET_linux-aarch64.mk  TARGET_linux-arm.mk  TARGET_linux-arm64.mk  TARGET_linux-mips.mk  TARGET_linux-mips64.mk  TARGET_linux-riscv64.mk  TARGET_linux-sh.mk  TARGET_linux-x86.mk  TARGET_linux-x86_64.mk  darwin-x86.mk  fdo.mk  javac.mk  linux-arm.mk  linux-sh.mk  linux-x86.mk  mac_version.mk  select.mk  target_linux-x86.mk  windows-x86.mk
core/no_java_path/: java
core/packaging/: flags.mk
core/proguard/: checknotnull.flags  kotlin.flags
core/tasks/: OWNERS  README.dex_preopt_check.md  apicheck.mk  apidiff.mk  art-host-tests.mk  art.mk  automotive-general-tests.mk  automotive-sdv-tests.mk  automotive-tests.mk  autorepro.mk  berberis_test.mk  boot_jars_package_check.mk  build_custom_images.mk  catbox.mk  check-abi-dump-list.mk  check_emu_boot.mk  collect_gpl_sources.mk  csuite.mk  cts-interactive.mk  cts-v-host.mk  cts.mk  cts_instant.mk  cts_root.mk  cts_v2.mk  deps_licenses.mk  device-platinum-tests.mk  device-tests.mk  dex_preopt_check.mk  dts.mk  factory_bundle.mk  factory_ramdisk.mk  find-shareduid-violation.mk  find-shareduid-violation.py  fontchain_lint.mk  framework_library.mk  general-tests-shared-libs.mk  general-tests.mk  host-unit-tests.mk  host_init_verifier.mk  ide.mk  (+30 more)
tools/: Android.bp  Android.mk  BUILD.bazel  OWNERS  adbs  auto_gen_test_config.py  auto_gen_test_config_test.py  brillo-clang-format  build-license-metadata.sh  build-runfiles.cc  buildinfo.sh  buildinfo_common.sh  characteristics_rro_generator.py  check_builds.sh  check_elf_file.py  check_identical_lib.sh  check_link_type.py  check_radio_versions.py  checkowners.py  compare_builds.py  compare_file_list_to_staging_dir.py  compare_fileslist.py  device_buildinfo.sh  diff_package_overlays.py  dump-package-stats  event_log_tags.bzl  event_log_tags.py  exercise_compare_builds  extract_kernel.py  fat16copy.py  fileslist.py  fileslist_util.py  filter-product-graph.py  find_static_candidates.py  findleaves.py  findleaves.sh  fixlinebreaks.sh  generate-enforce-rro-android-manifest.py  generate-notice-files.py  generate-sbom.py  (+28 more)
tools/aconfig/: .editorconfig  Android.bp  Cargo.toml  OWNERS  PREUPLOAD.cfg  TEST_MAPPING  build.rs  rustfmt.toml
tools/acp/: Android.bp  Android.mk  README  acp.c
tools/apicheck/: Android.bp  Android.mk
tools/apksigner/: Android.mk
tools/applypatch/: Android.mk  applypatch.c  applypatch.h  applypatch.sh  bsdiff.c  freecache.c  imgdiff.c  imgdiff.h  imgpatch.c  main.c  xdelta3.c
tools/apriori/: Android.mk  apriori.c  apriori.h  cmdline.c  cmdline.h  debug.h  hash.c  main.c  prelink_info.c  prelink_info.h  prelinkmap.c  prelinkmap.h  rangesort.c  rangesort.h  source.c  source.h  tweak.h
tools/atree/: Android.bp  Android.mk  atree.cpp  files.cpp  files.h  fs.cpp  fs.h  options.h
tools/bin2asm/: Android.mk  data  icudata.c
tools/canoninja/: README.md  canoninja.go  canoninja_test.go  go.mod
tools/check-flagged-apis/: Android.bp  OWNERS  check-flagged-apis.sh
tools/check_prereq/: Android.mk  check_prereq.c
tools/compliance/: Android.bp  README.md  actionset.go  condition.go  condition_test.go  conditionset.go  conditionset_test.go  doc.go  go.mod  go.sum  go.work  graph.go  noticeindex.go  policy_policy.go  policy_policy_test.go  policy_resolve.go  policy_resolve_test.go  policy_resolvenotices_test.go  policy_resolveprivacy.go  policy_resolveprivacy_test.go  policy_resolveshare.go  policy_resolveshare_test.go  policy_shareprivacyconflicts.go  policy_shareprivacyconflicts_test.go  policy_shipped.go  policy_shipped_test.go  policy_walk.go  policy_walk_test.go  readgraph.go  readgraph_test.go  resolution.go  resolutionset.go  resolutionset_test.go  test_util.go
tools/dependency_mapper/: Android.bp  OWNERS  README.md
tools/dexpreopt/: Android.mk  Config.mk  dexpreopt.py  geninitrc.awk
tools/docker/: .gitignore  Dockerfile  README.md
tools/droiddoc/: Android.bp  Android.mk  LICENSE  NOTICE  README
tools/edit_monitor/: Android.bp  OWNERS  daemon_manager.py  daemon_manager_test.py  edit_monitor.py  edit_monitor_integration_test.py  edit_monitor_test.py  main.py  utils.py  (+1 more)
(+1318 files in other folders)
