# Copyright (C) 2023 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License

# Export tradefed templates for tests.
exports_files(
    glob(["*.xml"]),
)

# Export proguard flag files for r8.
filegroup(
    name = "global_proguard_flags",
    srcs = [
        "proguard.flags",
        "proguard_basic_keeps.flags",
    ],
    visibility = ["//visibility:public"],
)
