py_library(
    name="event_log_tags",
    srcs = ["event_log_tags.py"],
)

py_binary(
    name="java-event-log-tags",
    srcs=["java-event-log-tags.py"],
    deps=[":event_log_tags"],
    visibility = ["//visibility:public"],
    python_version = "PY2",
)

py_binary(
    name="merge-event-log-tags",
    srcs=["merge-event-log-tags.py"],
    deps=[":event_log_tags"],
    visibility = ["//visibility:public"],
    python_version = "PY2",
)
