py_library(
    name = "event_log_tags",
    srcs = ["event_log_tags.py"],
)

py_binary(
    name = "java-event-log-tags",
    srcs = ["java-event-log-tags.py"],
    python_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [":event_log_tags"],
)

py_binary(
    name = "merge-event-log-tags",
    srcs = ["merge-event-log-tags.py"],
    python_version = "PY3",
    visibility = ["//visibility:public"],
    deps = [":event_log_tags"],
)

py_binary(
    name = "check_elf_file",
    srcs = ["check_elf_file.py"],
    python_version = "PY3",
    visibility = ["//visibility:public"],
)
