[package]
name = "aconfig"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["cargo"]
cargo = []

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
itertools = "0.10.5"
paste = "1.0.11"
protobuf = "3.2.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
tinytemplate = "1.2.1"

[build-dependencies]
protobuf-codegen = "3.2.0"

[dev-dependencies]
itertools = "0.10.5"
