[package]
name = "aconfig_storage_file"
version = "0.1.0"
edition = "2021"

[features]
default = ["cargo"]
cargo = []

[dependencies]
anyhow = "1.0.69"
protobuf = "3.2.0"
tempfile = "3.9.0"
thiserror = "1.0.56"
clap = { version = "4.1.8", features = ["derive"] }
cxx = "1.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

[[bin]]
name = "aconfig-storage"
path = "src/main.rs"

[build-dependencies]
protobuf-codegen = "3.2.0"
cxx-build = "1.0"
